--- a/frontend/package.json
+++ b/frontend/package.json
@@ -11,8 +11,13 @@
   },
   "dependencies": {
     "@ant-design/icons": "^5.6.1",
+    "@types/axios": "^0.9.36",
+    "axios": "^1.11.0",
+    "mobx": "^6.13.7",
+    "mobx-react-lite": "^4.1.0",
     "react": "^19.1.0",
     "react-dom": "^19.1.0",
+    "react-input-mask-next": "^3.0.0-alpha.12",
     "react-router": "^7.7.1",
     "sass": "^1.89.2"
   },
@@ -20,6 +25,7 @@
     "@eslint/js": "^9.30.1",
     "@types/react": "^19.1.8",
     "@types/react-dom": "^19.1.6",
+    "@types/react-input-mask": "^3.0.6",
     "@vitejs/plugin-react": "^4.6.0",
     "eslint": "^9.30.1",
     "eslint-plugin-react-hooks": "^5.2.0",
