add new function server

--- a/server/.env
+++ b/server/.env
@@ -8,3 +8,9 @@ DB_PORT=5432
 
 NODE_ENV=development
 SECRET_KEY=random_string_key
+REFRESH_KEY=jwt-refresh-secret-key
+
+SMTP_HOST="smtp.gmail.com"
+SMTP_PORT=587
+SMTP_USER=maksim05166@gmail.com
+SMTP_PASSWORD=
