--- a/frontend/package.json
+++ b/frontend/package.json
@@ -11,7 +11,6 @@
   },
   "dependencies": {
     "@ant-design/icons": "^5.6.1",
-    "@types/axios": "^0.9.36",
     "axios": "^1.11.0",
     "mobx": "^6.13.7",
     "mobx-react-lite": "^4.1.0",
@@ -28,6 +27,7 @@
     "@types/react-input-mask": "^3.0.6",
     "@vitejs/plugin-react": "^4.6.0",
     "eslint": "^9.30.1",
+    "eslint-plugin-import": "^2.32.0",
     "eslint-plugin-react-hooks": "^5.2.0",
     "eslint-plugin-react-refresh": "^0.4.20",
     "globals": "^16.3.0",
