--- a/server/.env
+++ b/server/.env
@@ -6,11 +6,14 @@ DB_PASSWORD=1
 DB_HOST=localhost
 DB_PORT=5432
 
+API_URL=localhost:5000
+CLIENT_URL=localhost:5173
 NODE_ENV=development
 SECRET_KEY=random_string_key
 REFRESH_KEY=jwt-refresh-secret-key
 
-SMTP_HOST="smtp.gmail.com"
-SMTP_PORT=587
-SMTP_USER=maksim05166@gmail.com
-SMTP_PASSWORD=
+SMTP_HOST=smtp.yandex.com
+SMTP_PORT=465 
+SMTP_USER=lll.Maksim.lll@yandex.ru
+SMTP_PASSWORD=lkurageedkjviisz
+SMTP_SECURE=true 
