--- a/frontend/package.json
+++ b/frontend/package.json
@@ -18,6 +18,7 @@
     "react-dom": "^19.1.0",
     "react-input-mask-next": "^3.0.0-alpha.12",
     "react-router": "^7.7.1",
+    "react-router-dom": "^7.7.1",
     "sass": "^1.89.2"
   },
   "devDependencies": {
