--- a/server/.env
+++ b/server/.env
@@ -18,3 +18,9 @@ SMTP_PORT=465
 SMTP_USER=lll.Maksim.lll@yandex.ru
 SMTP_PASSWORD=lkurageedkjviisz
 SMTP_SECURE=true 
+
+TWILIO_ACCOUNT_SID=ACXXXXXXXXXXXXXXXXXXXXXXXXXXXXXXXX 
+TWILIO_AUTH_TOKEN=your_auth_token_here
+TWILIO_PHONE_NUMBER=+1234567890
+TWILIO_SERVICE_SID=VAxxx  
+TEMP_SECRET=aldfsjlkdjasf
