--- a/server/package.json
+++ b/server/package.json
@@ -55,6 +55,7 @@
     "pg-hstore": "^2.3.4",
     "reflect-metadata": "^0.2.2",
     "sequelize-typescript": "^2.1.6",
+    "twilio": "^5.8.0",
     "uuid": "^11.1.0"
   }
 }
