--- a/server/.env
+++ b/server/.env
@@ -19,8 +19,5 @@ SMTP_USER=lll.Maksim.lll@yandex.ru
 SMTP_PASSWORD=lkurageedkjviisz
 SMTP_SECURE=true 
 
-TWILIO_ACCOUNT_SID=ACXXXXXXXXXXXXXXXXXXXXXXXXXXXXXXXX 
-TWILIO_AUTH_TOKEN=your_auth_token_here
-TWILIO_PHONE_NUMBER=+1234567890
-TWILIO_SERVICE_SID=VAxxx  
-TEMP_SECRET=aldfsjlkdjasf
+TELEGRAM_BOT_TOKEN=8403307696:AAFcEXOSzOptEcIukP4qarnLIAl5R0GX7BA
+        
