--- a/server/package.json
+++ b/server/package.json
@@ -15,7 +15,8 @@
     "build": "rimraf ./build && npx tsc",
     "start": "npm run build && node build/main",
     "lint": "npx eslint ./src",
-    "format": "npx eslint ./src --fix"
+    "format": "npx eslint ./src --fix",
+    "start:bot": "npx ts-node --esm src/telegram/telegram.bot.ts"
   },
   "keywords": [],
   "author": "",
@@ -27,8 +28,7 @@
     "@types/express-fileupload": "^1.5.1",
     "@types/jsonwebtoken": "^9.0.10",
     "@types/multer": "^2.0.0",
-    "@types/node": "^24.1.0",
-    "@types/node-telegram-bot-api": "^0.64.10",
+    "@types/node": "^24.2.0",
     "@types/nodemailer": "^6.4.17",
     "@typescript-eslint/eslint-plugin": "^8.38.0",
     "@typescript-eslint/parser": "^8.38.0",
@@ -50,8 +50,8 @@
     "express": "^5.1.0",
     "express-fileupload": "^1.5.2",
     "express-validator": "^7.2.1",
+    "grammy": "^1.37.0",
     "jsonwebtoken": "^9.0.2",
-    "node-telegram-bot-api": "^0.63.0",
     "nodemailer": "^7.0.5",
     "pg": "^8.16.3",
     "pg-hstore": "^2.3.4",
