--- a/server/.env
+++ b/server/.env
@@ -6,8 +6,8 @@ DB_PASSWORD=1
 DB_HOST=localhost
 DB_PORT=5432
 
-API_URL=localhost:5000
-CLIENT_URL=localhost:5173
+API_URL=http://localhost:5000/
+CLIENT_URL=http://localhost:5173
 NODE_ENV=development
 SECRET_KEY_ACCESS=random_string_key
 SECRET_KEY_REFRESH=random_string_key_2
@@ -19,5 +19,4 @@ SMTP_USER=lll.Maksim.lll@yandex.ru
 SMTP_PASSWORD=lkurageedkjviisz
 SMTP_SECURE=true 
 
-TELEGRAM_BOT_TOKEN=8403307696:AAFcEXOSzOptEcIukP4qarnLIAl5R0GX7BA
-        
+TELEGRAM_BOT_TOKEN=8403307696:AAFcEXOSzOptEcIukP4qarnLIAl5R0GX7BA 
