--- a/frontend/package.json
+++ b/frontend/package.json
@@ -11,16 +11,19 @@
   },
   "dependencies": {
     "@ant-design/icons": "^5.6.1",
+    "@types/react-datepicker": "^6.2.0",
     "axios": "^1.11.0",
     "framer-motion": "^12.23.12",
     "mobx": "^6.13.7",
     "mobx-react-lite": "^4.1.0",
     "react": "^19.1.0",
+    "react-datepicker": "^8.7.0",
     "react-dom": "^19.1.0",
     "react-input-mask-next": "^3.0.0-alpha.12",
     "react-intersection-observer": "^9.16.0",
     "react-router": "^7.7.1",
     "react-router-dom": "^7.7.1",
+    "react-select": "^5.10.2",
     "sass": "^1.89.2"
   },
   "devDependencies": {
