--- a/frontend/package.json
+++ b/frontend/package.json
@@ -11,6 +11,7 @@
   },
   "dependencies": {
     "@ant-design/icons": "^5.6.1",
+    "@emotion/react": "^11.14.0",
     "@types/react-datepicker": "^6.2.0",
     "axios": "^1.11.0",
     "framer-motion": "^12.23.12",
