--- a/server/package.json
+++ b/server/package.json
@@ -54,6 +54,7 @@
     "grammy": "^1.37.0",
     "jsonwebtoken": "^9.0.2",
     "multer": "^2.0.2",
+    "node-cron": "^4.2.1",
     "nodemailer": "^7.0.5",
     "pg": "^8.16.3",
     "pg-hstore": "^2.3.4",
