--- a/frontend/package.json
+++ b/frontend/package.json
@@ -14,6 +14,7 @@
     "@emotion/react": "^11.14.0",
     "@types/react-datepicker": "^6.2.0",
     "axios": "^1.11.0",
+    "dayjs": "^1.11.18",
     "framer-motion": "^12.23.12",
     "mobx": "^6.13.7",
     "mobx-react-lite": "^4.1.0",
