--- a/frontend/package.json
+++ b/frontend/package.json
@@ -27,7 +27,8 @@
     "react-router": "^7.7.1",
     "react-router-dom": "^7.7.1",
     "react-select": "^5.10.2",
-    "sass": "^1.89.2"
+    "sass": "^1.89.2",
+    "socket.io-client": "^4.8.1"
   },
   "devDependencies": {
     "@eslint/js": "^9.30.1",
