--- a/server/package.json
+++ b/server/package.json
@@ -61,6 +61,7 @@
     "pg": "^8.16.3",
     "pg-hstore": "^2.3.4",
     "reflect-metadata": "^0.2.2",
+    "sequelize": "^6.37.7",
     "sequelize-typescript": "^2.1.6",
     "twilio": "^5.8.0",
     "uuid": "^11.1.0",
